test: Use managed roles to create dbs and users

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/test/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/test/cluster.yaml
@@ -74,7 +74,5 @@ spec:
   managed:
     roles:
       - name: testapp
-        ensure: present
+        createdb: true
         login: true
-        superuser: false
-        disablePassword: true
