fix: Add tmpfs mount

--- a/kubernetes/apps/media/posterizarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/posterizarr/app/helmrelease.yaml
@@ -80,3 +80,7 @@ spec:
             subPath: assetsbackup
           - path: /manualassets
             subPath: manualassets
+      tmpfs:
+        type: emptyDir
+        globalMounts:
+          - path: /.cache
