chore: Move Posterizarr config to secret

--- a/kubernetes/apps/media/posterizarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/posterizarr/app/helmrelease.yaml
@@ -71,6 +71,12 @@ spec:
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
+      config-file:
+        type: secret
+        identifier: posterizarr-secret
+        globalMounts:
+          - path: /config/config.json
+            subPath: config.json
       posters:
         type: nfs
         server: truenas.internal
