feat: Massive Kometa rework

--- a/kubernetes/apps/media/kometa/app/cronjob.yaml
+++ b/kubernetes/apps/media/kometa/app/cronjob.yaml
@@ -44,6 +44,9 @@ spec:
                 - name: posters
                   mountPath: /manualassets
                   subPath: manualassets
+                - name: posters
+                  mountPath: /missing
+                  subPath: missing
           volumes:
             - name: pvc
               persistentVolumeClaim:
