--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -14,95 +14,333 @@ spec:
       engineVersion: v2
       data:
         config.yml: |
+            # yaml-language-server: $schema=https://raw.githubusercontent.com/Kometa-Team/Kometa/nightly/json-schema/config-schema.json
             libraries:
+            #########
+            ## Movies
+            #########
                 Movies:
-                    remove_overlays: false
-                    reapply_overlay: false
-                    metadata_files:
-                        - pmm: basic
-                        - pmm: tautulli
-                        - pmm: imdb
-                        - pmm: franchise
+                    ##############
+                    ## Collections
+                    ##############
+                    collection_files:
+                    - default: based
+                    - default: resolution
+                    - default: genre
+                    - default: separator_award
+                    - default: pca # People's Choice Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: emmy # Emmy Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: golden # Golden Globes Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: oscars # The Oscars
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: separator_chart
+                    - default: imdb
+                    - default: tautulli
+                    - default: tmdb
+                    - default: basic
+                    - default: collectionless
+                    - default: studio
+                    - git: bullmoose20/separator_franchise          # Separator for franchise
+                    template_variables:
+                        collection_section: '035' # Set to "035" to be right before universe. Should be the same here and below
+                    - default: franchise
+                    template_variables:
+                        collection_section: '035' # Set to "035" to be right before universe. Should be the same here and above
+                    - default: seasonal
+                    template_variables:
+                        schedule_years: daily
+                        schedule_valentine: daily
+                        schedule_patrick: daily
+                        schedule_easter: daily
+                        schedule_mother: daily
+                        schedule_memorial: daily
+                        schedule_father: daily
+                        schedule_independence: daily
+                        schedule_labor: daily
+                        schedule_halloween: daily
+                        schedule_veteran: daily
+                        schedule_thanksgiving: daily
+                        schedule_christmas: daily
+                        schedule_aapi: daily
+                        schedule_disabilities: daily
+                        schedule_black_history: daily
+                        schedule_lgbtq: daily
+                        schedule_latinx: daily
+                        schedule_women: daily
+                    - default: streaming
+                    - default: universe
+                    #############
+                    ## Operations
+                    #############
+                    operations:
+                    split_duplicates: false
+                    assets_for_all: true
+                    delete_collections:
+                        configured: false
+                        managed: false
+                        less: 99999 
+                    mass_user_rating_update: mdb_tomatoes
+                    mass_critic_rating_update: imdb
+                    mass_audience_rating_update: tmdb
+                    mass_genre_update:
+                    - tmdb
+                    - imdb
+                    - tvdb
+                    mass_content_rating_update:
+                    - mdb_commonsense
+                    - omdb
+                    mass_studio_update:
+                    - tmdb
+                    mass_originally_available_update:
+                    - tmdb
+                    - tvdb
+                    - omdb
+                    mass_imdb_parental_labels: none
+                    #############
+                    ## Overlays
+                    #############
                     overlay_files:
-                        - pmm: ribbon
-                        - pmm: resolution
-                        - pmm: audio_codec
+                        - default: ribbon
+                        - default: resolution
+                        - default: audio_codec
+                        - default: mediastinger
+                        - default: streaming
+                        template_variables:
+                            horizontal_align: left
+                            vertical_align: top
+                            vertical_offset: 757
+                        - default: ratings                                                   # 5, 6, 7
+                        template_variables:
+                            rating1: user
+                            rating1_image: rt_tomato
+                            rating1_font: /config/fonts/Adlib.ttf
+                            rating1_font_size: 63
+                            horizontal_position: right
+                    ###########
+                    ## Settings
+                    ###########
+                    report_path: /missing/Movies_report.yml
+                    remove_overlays: false
+                    reapply_overlays: false
+                    settings:
+                        asset_directory: /assets/Movies/
+                        prioritize_assets: true
+                    template_variables:
+                    sep_style: gray
+                    collection_mode: hide
+                    language: en
+                    placeholder_imdb_id: tt8579674  
+
                 TV Shows:
-                    remove_overlays: false
-                    reapply_overlay: false
-                    metadata_files:
-                        - pmm: basic
-                        - pmm: tautulli
-                        - pmm: imdb
-                        - pmm: franchise
+                    ##############
+                    ## Collections
+                    ##############
+                    collection_files:
+                    - default: based
+                    - default: resolution
+                    - default: genre
+                    - git: bullmoose20/tv_refresh # Tells plex to refresh media items added within the last 7 days
+                    - default: separator_award
+                    - default: pca # People's Choice Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: emmy # Emmy Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: golden # Golden Globes Awards
+                    template_variables:
+                        data:
+                        starting: first
+                    - default: separator_chart
+                    - default: imdb
+                    - default: tautulli
+                    - default: tmdb
+                    - default: basic
+                    - default: collectionless
+                    - default: studio
+                    - git: bullmoose20/separator_franchise          # Separator for franchise
+                    template_variables:
+                        collection_section: '035' # Set to "035" to be right before universe. Should be the same here and below
+                    - default: franchise
+                    template_variables:
+                        collection_section: '035' # Set to "035" to be right before universe. Should be the same here and above
+                    - default: seasonal
+                    template_variables:
+                        schedule_years: daily
+                        schedule_valentine: daily
+                        schedule_patrick: daily
+                        schedule_easter: daily
+                        schedule_mother: daily
+                        schedule_memorial: daily
+                        schedule_father: daily
+                        schedule_independence: daily
+                        schedule_labor: daily
+                        schedule_halloween: daily
+                        schedule_veteran: daily
+                        schedule_thanksgiving: daily
+                        schedule_christmas: daily
+                        schedule_aapi: daily
+                        schedule_disabilities: daily
+                        schedule_black_history: daily
+                        schedule_lgbtq: daily
+                        schedule_latinx: daily
+                        schedule_women: daily
+                    - default: streaming
+                    - default: universe
+                    #############
+                    ## Operations
+                    #############
+                    operations:
+                    split_duplicates: false
+                    assets_for_all: true
+                    delete_collections:
+                        configured: false
+                        managed: false
+                        less: 99999 
+                    mass_user_rating_update: mdb_tomatoes
+                    mass_critic_rating_update: imdb
+                    mass_audience_rating_update: tmdb
+                    mass_genre_update:
+                    - tmdb
+                    - imdb
+                    - tvdb
+                    mass_content_rating_update:
+                    - mdb_commonsense
+                    - omdb
+                    mass_studio_update:
+                    - tmdb
+                    mass_originally_available_update:
+                    - tmdb
+                    - tvdb
+                    - omdb
+                    mass_imdb_parental_labels: none
+                    #############
+                    ## Overlays
+                    #############
                     overlay_files:
-                        - pmm: ribbon
-                        - pmm: resolution
-                        - pmm: audio_codec
+                        - default: ribbon
+                        - default: resolution
+                        - default: resolution
+                        template_variables:
+                            builder_level: season
+                        - default: resolution
+                        template_variables:
+                            builder_level: episode
+                        - default: audio_codec
+                        - default: audio_codec
+                        template_variables:
+                            builder_level: season
+                        - default: audio_codec
+                        template_variables:
+                            builder_level: episode
+                        - default: runtimes
+                        template_variables:
+                            back_width: 305
+                            text: ''
+                            builder_level: episode
+                        - default: status                               # Airing, Returning, Ended, Canceled and works with builder_level show
+                        template_variables:
+                            horizontal_align: center
+                            vertical_align: top
+                            vertical_offset: 0
+                            horizontal_offset: 0
+                            back_height: 85
+                            back_width: 1100
+                            font: /config/fonts/Avenir_95_Black.ttf
+                            font_size: 60
+                            back_color_airing: '#016920'
+                            back_color_returning: '#007acf'
+                            back_color_canceled: '#B52222'
+                            back_color_ended: '#000847'
+                    ###########
+                    ## Settings
+                    ###########
+                    report_path: /missing/TV_report.yml
+                    remove_overlays: false
+                    reapply_overlays: false
+                    settings:
+                        asset_directory: /assets/TV Shows/
+                        prioritize_assets: true
+                    template_variables:
+                    sep_style: gray
+                    collection_mode: hide
+                    language: en
+                    placeholder_imdb_id: tt1190634 
             playlist_files:
                 - default: playlist
+                template_variables:
+                    libraries: Movies, TV Shows
             settings:
-              cache: true
-              cache_expiration: 60
-              asset_directory: config/assets
-              asset_folders: true
-              asset_depth: 0
-              create_asset_folders: false
-              prioritize_assets: false
-              dimensional_asset_rename: false
-              download_url_assets: false
-              show_missing_season_assets: false
-              show_missing_episode_assets: false
-              show_asset_not_needed: true
-              sync_mode: append
-              minimum_items: 1
-              default_collection_order:
-              delete_below_minimum: true
-              delete_not_scheduled: false
-              run_again_delay: 2
-              missing_only_released: false
-              only_filter_missing: false
-              show_unmanaged: true
-              show_filtered: false
-              show_options: false
-              show_missing: true
-              show_missing_assets: true
-              save_report: false
-              tvdb_language: eng
-              ignore_ids:
-              ignore_imdb_ids:
-              item_refresh_delay: 0
-              playlist_sync_to_user: all
-              playlist_exclude_user:
-              playlist_report: false
-              verify_ssl: true
-              custom_repo:
-              check_nightly: false
-              show_unconfigured: true
-              playlist_exclude_users:
-              playlist_sync_to_users: all
-              overlay_artwork_filetype: jpg
-              overlay_artwork_quality: 75
-              run_order:
-              - operations
-              - metadata
-              - collections
-              - overlays
-              show_unfiltered: false
+            cache: true
+            cache_expiration: 60
+            asset_directory: /assets
+            asset_folders: true
+            asset_depth: 1
+            create_asset_folders: false
+            prioritize_assets: true
+            dimensional_asset_rename: false
+            download_url_assets: false
+            show_missing_season_assets: false
+            show_missing_episode_assets: false
+            show_asset_not_needed: false
+            sync_mode: sync
+            minimum_items: 1
+            default_collection_order:
+            delete_below_minimum: true
+            delete_not_scheduled: false
+            run_again_delay: 2
+            missing_only_released: true
+            only_filter_missing: false
+            show_unconfigured: true
+            show_unmanaged: true
+            show_filtered: false
+            show_options: true
+            show_missing: false
+            show_missing_assets: false
+            save_report: true
+            tvdb_language: eng
+            ignore_ids:
+            ignore_imdb_ids:
+            item_refresh_delay: 0
+            playlist_sync_to_users: all
+            playlist_report: false
+            verify_ssl: true
+            custom_repo:
+            playlist_exclude_users:
+            overlay_artwork_filetype: jpg
+            overlay_artwork_quality: 75
+            run_order:
+            - operations
+            - metadata
+            - collections
+            - overlays
             plex:
                 url: {{ .PlexURL }}
                 token: {{ .PlexToken }}
                 timeout: 60
-                db_cache: null
                 clean_bundles: true
                 empty_trash: true
-                optimize: false
-                verify_ssl: null
+                optimize: true
+                db_cache: 2048
+                verify_ssl: true
             tmdb:
                 apikey: {{ .tmdbApiKey }}
                 language: en
                 cache_expiration: 60
-                region: null
+                region: US
             tautulli:
                 url: http://tautulli
                 apikey: {{ .TautulliAPIKey }}
@@ -113,8 +351,8 @@ spec:
                 url: http://radarr
                 token: {{ .RadarrAPIKey }}
                 root_folder_path: /PlexMedia/Movies
-                quality_profile: UHD - Trash - Auto
-                tag: pmm
+                quality_profile: Any
+                tag: kometa
                 add_missing: false
                 add_existing: false
                 upgrade_existing: false
@@ -122,27 +360,27 @@ spec:
                 monitor: true
                 availability: announced
                 search: false
-                radarr_path: null
-                plex_path: null
+                radarr_path:
+                plex_path:
                 monitor_existing: false
             sonarr:
                 url: http://sonarr
                 token: {{ .SonarrAPIKey }}
                 root_folder_path: /PlexMedia/TV
-                quality_profile: Bluray-2160p
-                tag: pmm
+                quality_profile: Any
+                tag: kometa
                 add_missing: false
                 add_existing: false
                 upgrade_existing: false
                 ignore_cache: false
                 monitor: all
-                language_profile: null
+                language_profile: English
                 series_type: standard
                 season_folder: true
                 search: false
                 cutoff_search: false
-                sonarr_path: null
-                plex_path: null
+                sonarr_path:
+                plex_path:
                 monitor_existing: false
   dataFrom:
     - extract:
