fix: Status banner conflicts

--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -232,6 +232,8 @@ spec:
                     overlay_files:
                         - default: ribbon
                         - default: resolution
+                          template_variables:
+                            vertical_offset: 95
                         - default: resolution
                           template_variables:
                               builder_level: season
@@ -239,6 +241,8 @@ spec:
                           template_variables:
                               builder_level: episode
                         - default: audio_codec
+                          template_variables:
+                            vertical_offset: 95
                         - default: audio_codec
                           template_variables:
                               builder_level: season
