--- a/kubernetes/apps/network/technitium/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium/app/helmrelease.yaml
@@ -57,6 +57,9 @@ spec:
         ports:
           http:
             port: *port
+          dns:
+            port: 53
+            protocol: UDP
     route:
       app:
         hostnames:
