--- a/kubernetes/apps/network/technitium/dns/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium/dns/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
             name: &secret technitium-dns-secret
             key: *name
     extraArgs:
-      - --rfc2136-host=10.1.10.2
+      - --rfc2136-host=technitium
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
