--- a/kubernetes/apps/network/technitium/dns/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium/dns/helmrelease.yaml
@@ -14,24 +14,23 @@ spec:
     provider:
       name: rfc2136
     env:
-      - name: &name TSIG_KEY
+      - name: EXTERNAL_DNS_RFC2136_TSIG_SECRET
         valueFrom:
           secretKeyRef:
             name: &secret technitium-dns-secret
-            key: *name
+            key: TSIG_KEY
     extraArgs:
       - --rfc2136-host=technitium
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
-      - --rfc2136-tsig-keyname=$(TSIG_KEY)
       - --rfc2136-tsig-axfr
     triggerLoopOnEvent: true
     policy: sync
     sources:
       - crd
       - gateway-httproute
-    txtOwnerId: default
+    txtOwnerId: external-dns
     txtPrefix: k8s.
     domainFilters:
       - noms.tv
