--- a/kubernetes/apps/network/technitium/dns/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium/dns/helmrelease.yaml
@@ -24,6 +24,7 @@ spec:
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
+      - --rfc2136-tsig-keyname=external-dns
       - --rfc2136-tsig-axfr
     triggerLoopOnEvent: true
     policy: sync
