--- a/kubernetes/apps/network/technitium/dns/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium/dns/helmrelease.yaml
@@ -18,9 +18,9 @@ spec:
             name: technitium-dns-secret
             key: TSIG_KEY
     extraArgs:
-      - --rfc2136-host=10.1.10.2
+      - --rfc2136-host=10.1.10.3
       - --rfc2136-port=53
-      - --rfc2136-zone=dns.noms.tv
+      - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
       - --rfc2136-tsig-keyname=external-dns
       - --rfc2136-tsig-axfr
