chore: More path updates

--- a/kubernetes/core/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/core/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
         kind: GitRepository
         url: https://github.com/Nomsplease/Home-Ops
         ref: refs/heads/main
-        path: kubernetes/flux/cluster
+        path: kubernetes/core/flux/cluster
         interval: 1h
       commonMetadata:
         labels:
