--- a/bootstrap/core/helmfile.d/01-apps.yaml
+++ b/bootstrap/core/helmfile.d/01-apps.yaml
@@ -61,7 +61,7 @@ releases:
     needs:
       - kube-system/spegel
 
-  - name: onepassword
+  - name: onepassword-connect
     namespace: external-secrets
     chart: oci://ghcr.io/bjw-s-labs/helm/app-template
     version: 4.5.0
@@ -82,7 +82,7 @@ releases:
           - apply
           - --server-side
           - --field-manager=kustomize-controller
-          - --filename=../../../kubernetes/core/apps/external-secrets/onepassword/app/clustersecretstore.yaml
+          - --filename=../../../kubernetes/core/apps/external-secrets/onepassword-connect/app/clustersecretstore.yaml
         events:
           - postsync
         showlogs: true
@@ -96,7 +96,7 @@ releases:
     values:
       - ./templates/values.yaml.gotmpl
     needs:
-      - external-secrets/onepassword
+      - external-secrets/onepassword-connect
 
   - name: flux-operator
     namespace: flux-system
