--- a/talos/core/talconfig.yaml
+++ b/talos/core/talconfig.yaml
@@ -48,9 +48,20 @@ nodes:
           - iommu=pt                            # PCI Passthrough
           - security=none                       # Less security, faster puter
           - talos.auditd.disabled=1             # Less security, faster puter
+          - ipv6.disable=1                      # Disable IPv6, more sanity
         systemExtensions:
             officialExtensions:
+                - siderolabs/iscsi-tools
                 - siderolabs/nfsrahead
+                - siderolabs/util-linux-tools
+    userVolumes: &volumes
+      - name: longhorn
+        provisioning:
+          diskSelector:
+            match: disk.transport == "usb"
+          minSize: 900GB
+        filesystem: 
+          type: xfs
 
 ##########
 ## Core-2 ##
@@ -62,6 +73,7 @@ nodes:
     installDisk: /dev/mmcblk0
     machineSpec: *machinespec
     schematic: *schematic
+    userVolumes: *volumes
 
 ##########
 ## Core-3 ##
@@ -73,6 +85,7 @@ nodes:
     installDisk: /dev/mmcblk0
     machineSpec: *machinespec
     schematic: *schematic
+    userVolumes: *volumes
 
 ##########
 ## Core-4 ##
@@ -83,3 +96,4 @@ nodes:
     installDisk: /dev/mmcblk0
     machineSpec: *machinespec
     schematic: *schematic
+    userVolumes: *volumes
