--- a/kubernetes/core/apps/longhorn-system/longhorn/ks.yaml
+++ b/kubernetes/core/apps/longhorn-system/longhorn/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: longhorn
-  namespace: kube-system
+  namespace: longhorn-system
 spec:
   interval: 1h
   path: ./kubernetes/core/apps/longhorn-system/longhorn/app
@@ -14,6 +14,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: kube-system
+  targetNamespace: longhorn-system
   timeout: 5m
   wait: false
