--- a/kubernetes/core/apps/volsync-system/volsync/ks.yaml
+++ b/kubernetes/core/apps/volsync-system/volsync/ks.yaml
@@ -9,8 +9,8 @@ spec:
   dependsOn:
     - name: snapshot-controller
       namespace: kube-system
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+    - name: longhorn
+      namespace: longhorn-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
