chore: Change some Longhorn values

--- a/kubernetes/core/apps/longhorn-system/longhorn/app/helmrelease.yaml
+++ b/kubernetes/core/apps/longhorn-system/longhorn/app/helmrelease.yaml
@@ -11,4 +11,7 @@ spec:
     name: longhorn
   values:
     defaultSettings:
-      defaultDataPath: /var/mnt/longhorn/
+      defaultReplicaCount: 3
+      backupstorePollInterval: 0
+      createDefaultDiskLabeledNodes: true
+      defaultDataPath: /var/mnt/longhorn
