test: Technitium ExternalDNS again

--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -17,5 +17,5 @@ resources:
   - ./external-proxy/ks.yaml
   # - ./lancache/ks.yaml
   - ./netbootxyz/ks.yaml
-  # - ./technitium/ks.yaml
+  - ./technitium/ks.yaml
   - ./unifi-dns/ks.yaml
