--- a/kubernetes/apps/network/technitium-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: technitium
+  name: technitium-dns
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,6 +13,7 @@ spec:
     template:
       data:
         TSIG_KEY: "{{ .EXTERNAL_DNS_TSIG_KEY }}"
+        TSIG_KEY_NAME: "{{ .EXTERNAL_DNS_TSIG_KEY_NAME }}"
   dataFrom:
     - extract:
         key: technitium
