--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -12,22 +12,33 @@ spec:
   values:
     fullnameOverride: *app
     env:
-      - name: EXTERNAL_DNS_RFC2136_TSIG_SECRET
+      - name: &name TSIG_KEY
         valueFrom:
           secretKeyRef:
-            name: technitium-dns-secret
-            key: TSIG_KEY
+            name: &secret technitium-dns-secret
+            key: *name
+      - name: &name TSIG_KEY_NAME
+        valueFrom:
+          secretKeyRef:
+            name: *secret
+            key: *name
     extraArgs:
       - --rfc2136-host=10.1.10.2
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
-      - --rfc2136-tsig-keyname=external-dns
+      - --rfc2136-tsig-keyname=$(TSIG_KEY_NAME)
+      - --rfc2136-tsig-secret=$(TSIG_KEY)
       - --rfc2136-tsig-axfr
+    triggerLoopOnEvent: true
     policy: sync
-    provider:
-      name: rfc2136
     sources:
       - gateway-httproute
+    txtOwnerId: default
+    txtPrefix: k8s.
+    domainFilters:
+      - noms.tv
     serviceMonitor:
       enabled: true
+    podAnnotations:
+      secret.reloader.stakater.com/reload: *secret
