--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -30,6 +30,8 @@ spec:
       - --rfc2136-tsig-keyname=$(TSIG_KEY_NAME)
       - --rfc2136-tsig-secret=$(TSIG_KEY)
       - --rfc2136-tsig-axfr
+    provider:
+      name: rfc2136
     logLevel: debug
     triggerLoopOnEvent: true
     policy: sync
