--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -17,23 +17,21 @@ spec:
         - 10.1.10.3
         - 10.1.10.4
     env:
-      - name: &name TSIG_KEY
+      - name: "EXTERNAL_DNS_RFC2136_TSIG_SECRET"
         valueFrom:
           secretKeyRef:
             name: &secret technitium-dns-secret
-            key: *name
-      - name: &name TSIG_KEY_NAME
+            key: TSIG_KEY
+      - name: "EXTERNAL_DNS_RFC2136_TSIG_KEYNAME"
         valueFrom:
           secretKeyRef:
             name: *secret
-            key: *name
+            key: TSIG_KEY_NAME
     extraArgs:
       - --rfc2136-host=10.1.10.2
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
       - --rfc2136-tsig-secret-alg=hmac-sha256
-      - --rfc2136-tsig-keyname=$(TSIG_KEY_NAME)
-      - --rfc2136-tsig-secret=$(TSIG_KEY)
       - --rfc2136-tsig-axfr
     provider:
       name: rfc2136
