chore: Adjust Arch workstation setup

--- a/.taskfiles/workstation/Taskfile.yaml
+++ b/.taskfiles/workstation/Taskfile.yaml
@@ -10,7 +10,7 @@ tasks:
   arch:
     desc: Set up tools on Arch
     cmds:
-      - paru --needed -S - < {{.WORKSTATION_RESOURCES_DIR}}/Archfile
+      - paru --needed -S --noconfirm - < {{.WORKSTATION_RESOURCES_DIR}}/Archfile
     sources:
       - '{{.WORKSTATION_RESOURCES_DIR}}/Archfile'
     generates:
