--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -10,7 +10,6 @@ resources:
   - ./audiobookshelf/ks.yaml
   - ./bazarr/ks.yaml
   - ./huntarr/ks.yaml
-  # - ./jellyseerr/ks.yaml
   - ./kometa/ks.yaml
   - ./music-assistant/ks.yaml
   - ./posterizarr/ks.yaml
@@ -18,6 +17,7 @@ resources:
   - ./radarr/ks.yaml
   - ./readarr/ks.yaml
   - ./recyclarr/ks.yaml
+  - ./seerr/ks.yaml
   - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
   - ./watchstate/ks.yaml
