--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -11,16 +11,13 @@ spec:
   interval: 1h
   values:
     fullnameOverride: *app
-    dnsConfig:
-      nameservers:
-        - 10.1.10.2
     env:
-      - name: "EXTERNAL_DNS_RFC2136_TSIG_SECRET"
+      - name: TSIG_KEY
         valueFrom:
           secretKeyRef:
             name: &secret technitium-dns-secret
             key: TSIG_KEY
-      - name: "EXTERNAL_DNS_RFC2136_TSIG_KEYNAME"
+      - name: TSIG_KEY_NAME
         valueFrom:
           secretKeyRef:
             name: *secret
@@ -29,6 +26,8 @@ spec:
       - --rfc2136-host=10.1.10.2
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
+      - --rfc2136-tsig-keyname=$TSIG_KEY_NAME
+      - --rfc2136-tsig-secret=$TSIG_KEY
       - --rfc2136-tsig-secret-alg=hmac-sha256
       - --rfc2136-tsig-axfr
     provider:
