--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -26,8 +26,8 @@ spec:
       - --rfc2136-host=10.1.10.2
       - --rfc2136-port=53
       - --rfc2136-zone=noms.tv
-      - --rfc2136-tsig-keyname=$TSIG_KEY_NAME
-      - --rfc2136-tsig-secret=$TSIG_KEY
+      - --rfc2136-tsig-keyname=$(TSIG_KEY_NAME)
+      - --rfc2136-tsig-secret=$(TSIG_KEY)
       - --rfc2136-tsig-secret-alg=hmac-sha256
       - --rfc2136-tsig-axfr
     provider:
