fix: Use webhook for Technitium External DNS

--- a/kubernetes/apps/network/technitium-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/externalsecret.yaml
@@ -12,8 +12,10 @@ spec:
     name: technitium-dns-secret
     template:
       data:
-        TSIG_KEY: "{{ .EXTERNAL_DNS_TSIG_KEY }}"
-        TSIG_KEY_NAME: "{{ .EXTERNAL_DNS_TSIG_KEY_NAME }}"
+        TECHNITIUM_URL: "{{ .URL }}"
+        TECHNITIUM_USERNAME: "{{ .username }}"
+        TECHNITIUM_PASSWORD: "{{ .password }}"
+        ZONE: "{{ .zone }}"
   dataFrom:
     - extract:
         key: technitium
