fix: Need service source for gateways

--- a/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/technitium-dns/app/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
     triggerLoopOnEvent: true
     policy: sync
     sources:
+      - service
       - gateway-httproute
     txtOwnerId: main
     txtPrefix: k8s.main
