chore: Remove PG Pooler

--- a/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
@@ -19,7 +19,7 @@ spec:
                 error_reporting:
                     enabled: true
                 postgresql:
-                    host: pooler-main-rw.databases
+                    host: main-db-rw.databases
                     name: authentik
                     user: "{{ .appUser }}"
                     password: "{{ .appPassword }}"
