--- a/kubernetes/apps/default/gitea/app/externalSecret.yaml
+++ b/kubernetes/apps/default/gitea/app/externalSecret.yaml
@@ -48,7 +48,7 @@ spec:
             [database]
             NAME = gitea
             DB_TYPE = postgres
-            HOST = pooler-main-rw.databases:5432
+            HOST = main-db-rw.databases:5432
             USER = {{ .appUser }}
             PASSWD = {{ .appPassword }}
             SCHEMA = public
