--- a/kubernetes/apps/default/mealie/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mealie/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         BASE_URL: "{{ .BaseUrl }}"
         # Database Settings
         DB_ENGINE: postgres
-        POSTGRES_SERVER: pooler-main-rw.databases
+        POSTGRES_SERVER: main-db-rw.databases
         POSTGRES_PORT: "5432"
         # AI Settings
         OPENAI_API_KEY: "{{ .openAIKey }}"
