--- a/kubernetes/apps/default/wikijs/app/externalSecret.yaml
+++ b/kubernetes/apps/default/wikijs/app/externalSecret.yaml
@@ -14,7 +14,7 @@ spec:
       engineVersion: v2
       data:
         DB_TYPE: postgres
-        DB_HOST: pooler-main-rw.databases
+        DB_HOST: main-db-rw.databases
         DB_PORT: "5432"
         DB_PASS: "{{ .appPassword }}" 
         DB_NAME: wikijs
