--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -7,5 +7,6 @@ components:
   - ../../components/common
 resources:
   - ./namespace.yaml
+  - ./cross-seed/ks.yaml
   - ./qbittorrent/ks.yaml
   - ./seedboxapi/ks.yaml
