--- a/kubernetes/apps/media/dispatcharr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/dispatcharr/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
             namespace: network
             sectionName: https
     persistence:
-      config:
+      data:
         existingClaim: "{{ .Release.Name }}"
       tmp:
         type: emptyDir
