--- a/kubernetes/apps/media/dispatcharr/celery/helmrelease.yaml
+++ b/kubernetes/apps/media/dispatcharr/celery/helmrelease.yaml
@@ -31,4 +31,4 @@ spec:
               REDIS_HOST: dispatcharr-redis
             envFrom:
               - secretRef:
-                  name: dispatcharr-secret
+                  name: dispatcharr-celery-secret
