--- a/kubernetes/apps/media/dispatcharr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/dispatcharr/app/helmrelease.yaml
@@ -32,13 +32,13 @@ spec:
                 spec:
                   failureThreshold: 30
                   periodSeconds: 5
-            resources:
-              claims:
-                - name: gpu
-    defaultPodOptions:
-      resourceClaims:
-        - name: gpu
-          resourceClaimTemplateName: dispatcharr
+    #         resources:
+    #           claims:
+    #             - name: gpu
+    # defaultPodOptions:
+    #   resourceClaims:
+    #     - name: gpu
+    #       resourceClaimTemplateName: dispatcharr
     service:
       app:
         ports:
