faet: Add new node to Rook cluster

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -82,6 +82,12 @@ spec:
           - name: main-6
             devices:
               - name: "/dev/disk/by-id/nvme-Samsung_SSD_990_PRO_1TB_S73VNJ0W320254A"
+          - name: main-7
+            devices:
+              - name: "/dev/disk/by-id/ata-CT1000BX500SSD1_2417E8AB0228"
+              - name: "/dev/disk/by-id/ata-CT1000BX500SSD1_2417E8AB7260"
+              - name: "/dev/disk/by-id/ata-CT1000BX500SSD1_2417E8AB726E"
+              - name: "/dev/disk/by-id/ata-CT1000BX500SSD1_2417E8AB7349"
     cephBlockPools:
       - name: ceph-blockpool
         spec:
