--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
@@ -1,18 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
-metadata:
-  name: gha-runner-scale-set
-spec:
-  interval: 5m
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 0.13.1
-  url: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
----
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -23,13 +9,6 @@ spec:
   chartRef:
     kind: OCIRepository
     name: gha-runner-scale-set
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
   values:
     githubConfigUrl: https://github.com/Nomsplease/Home-Ops
     githubConfigSecret: home-ops-runner-secret
@@ -47,18 +26,11 @@ spec:
       name: actions-runner-controller
       namespace: actions-runner-system
     template:
-      spec:
-        initContainers:
-          - name: init-volume-permissions
-            image: busybox
-            command: ["sh", "-c", "chown -R 1001:1001 /home/runner/_work"]
-            volumeMounts:
-              - name: work
-                mountPath: /home/runner/_work
         containers:
           - name: runner
             image: ghcr.io/home-operations/actions-runner:2.330.0@sha256:92a45e47f4b349f4da2307ebaaea5443cc86d1ce625d37acf2c61b3b09192e47
-            command: ["/home/runner/run.sh"]
+            command: 
+              - /home/runner/run.sh
             env:
               - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
                 value: "false"
