--- a/kubernetes/components/gpu/resourceclaimtemplate.yaml
+++ b/kubernetes/components/gpu/resourceclaimtemplate.yaml
@@ -10,5 +10,5 @@ spec:
         - name: gpu
           exactly:
             deviceClassName: gpu.intel.com
-            adminAccess: true
-            allocationMode: All
+            # adminAccess: true
+            # allocationMode: All
