fix: Resource claim template name

--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
     defaultPodOptions:
       resourceClaims:
         - name: gpu
-          resourceClaimTemplateName: plex
+          resourceClaimTemplateName: "{{ .Release.Name }}-gpu"
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
