--- a/kubernetes/apps/kube-system/cilium/cilium-bgp.conf
+++ b/kubernetes/apps/kube-system/cilium/cilium-bgp.conf
@@ -11,6 +11,7 @@ router bgp 64513
   neighbor 10.1.20.14 peer-group k8s
   neighbor 10.1.20.15 peer-group k8s
   neighbor 10.1.20.16 peer-group k8s
+  neighbor 10.1.20.17 peer-group k8s
 
   address-family ipv4 unicast
     neighbor k8s next-hop-self
