chore: Reload Authentik on secret updates

--- a/kubernetes/apps/authentication/authentik/app/helmrelease.yaml
+++ b/kubernetes/apps/authentication/authentik/app/helmrelease.yaml
@@ -18,6 +18,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: authentik
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   interval: 1h
   chartRef:
