fix: Attempting to fix Arc GPU and Intel DRA

--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -181,18 +181,20 @@ nodes:
           - -init_on_free                       # Less security, faster puter
           - -selinux                            # Less security, faster puter
           - apparmor=0                          # Less security, faster puter
+          - i915.enable_guc=3                   # Intel A-Series GPU
           - init_on_alloc=0                     # Less security, faster puter
           - init_on_free=0                      # Less security, faster puter
           - amd_iommu=on                        # PCI Passthrough
           - iommu=pt                            # PCI Passthrough
           - mitigations=off                     # Less security, faster puter
           - security=none                       # Less security, faster puter
+          - sysctl.kernel.kexec_load_disabled=1 # Intel A-Series GPU
           - talos.auditd.disabled=1             # Less security, faster puter
         systemExtensions: &amd-officialExtensions
             officialExtensions:
                 - siderolabs/amd-ucode
+                - siderolabs/i915
                 - siderolabs/mei
-                - siderolabs/xe
                 - siderolabs/nfsrahead
     installDiskSelector:
       model: 512GB*
