chore: Add Kubelet features for Intel DRA

--- a/talos/main/patches/kubelet.yaml
+++ b/talos/main/patches/kubelet.yaml
@@ -1,6 +1,9 @@
 machine:
   kubelet:
     extraConfig:
+      featureGates:
+        ImageVolume: true
+        ResourceHealthStatus: true
       maxPods: 150
     defaultRuntimeSeccompProfileEnabled: true
     nodeIP:
